--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="GrubDash meal delivery." />
+    <meta name="description" content="MealDeal meal delivery." />
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,700&display=swap"
       rel="stylesheet"
@@ -36,7 +36,7 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script> -->
-    <title>GrubDash</title>
+    <title>MealDeal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
